0030488: Visualization, Ray Tracing - empty error message on GLSL program compilation

OpenGl_ShaderObject::LoadAndCompile() - added method combining Load() and Compile() with optional error logging.
OpenGl_ShaderProgram::Link() now logs failures by default.